[package]
name = "minesboomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minesweeper_multiplayer = { path = "../minesweeper_multiplayer" }
minesboomer_utils = { path = "../minesboomer_utils" }

egui = "0.20.1"
eframe = "0.20.1"
image = "0.24.5"

tokio-tungstenite = "0.18.0"
tokio = { version = "1.23.0", features = ["full"] }
futures-util = "0.3.25"
futures = "0.3.25"
url = "2.3.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
